# darth-maul-bsq-rust

./: .gitignore  Cargo.toml  README.md  build.rs  events.json  qpm.json  qpm.shared.json
.cargo/: config.toml
.github/workflows/: build.yml
cpp/: EnhancedPlayFlowCoordinator.cpp  EnhancedPlayFlowCoordinator.hpp  EnhancedPlaySettingsViewController.cpp  EnhancedPlaySettingsViewController.hpp  ModifiersUI.cpp  quest_compat.cpp  quest_compat.hpp
scripts/: copy.ps1  make_compile_db.ps1  ndk-stack.ps1
src/: config.rs  lib.rs
src/hooks/: mod.rs  modifiers_ui_hook.rs  note_hooks.rs  player_tansform_hooks.rs  rumble_hooks.rs  user_info_hooks.rs
