[package]
name = "darth_maul_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib"]

[dependencies]
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = [
    "il2cpp_v31",
], branch = "cordl-fixes" }
# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust.git", features = [
    "UnityEngine+GameObject",
    "UnityEngine+Color",
    "BeatmapObjectSpawnController",
    "NoteData",
    "BeatmapDataItem",
    "PlayerTransforms",
    "SaberClashEffect",
    "HapticFeedbackManager",
    "StandardLevelGameplayManager",
    "GameplaySetupViewController",
    "StandardLevelScenesTransitionSetupDataSO",
    "IReadonlyBeatmapData",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }

# https://github.com/Hpmason/retour-rs/issues/69
[patch.crates-io]
retour = { git = "https://github.com/workingjubilee/hpmason-retour-rs.git", branch = "fix-retour-for-unsupported-fn-ptr-calling-conventions" }

[build-dependencies]
cc = "1.0"

[workspace]

members = [
    # "bs_cordl",
]
