[package]
name = "darth_maul_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib"]

[features]
default = []
ui = []

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
debug = "line-tables-only"

[profile.dev]
panic = "abort"
# split-debuginfo = "packed"


[dependencies]
paper2_tracing = { git = "https://github.com/Fernthedev/paperlog.git", package = "paper2_tracing" }
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = [
    "il2cpp_v31",
], branch = "cordl-fixes" }
# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust.git", features = [
    "UnityEngine+GameObject",
    "UnityEngine+Color",
    "BeatmapObjectSpawnController",
    "NoteData",
    "SliderData",
    "BeatmapDataItem",
    "PlayerTransforms",
    "SaberClashEffect",
    "HapticFeedbackManager",
    "StandardLevelGameplayManager",
    "GameplaySetupViewController",
    "StandardLevelScenesTransitionSetupDataSO",
    "IReadonlyBeatmapData",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }

# https://github.com/Hpmason/retour-rs/issues/69
[patch.crates-io]
retour = { git = "https://github.com/workingjubilee/hpmason-retour-rs.git", branch = "fix-retour-for-unsupported-fn-ptr-calling-conventions" }

# [patch."https://github.com/Fernthedev/quest-hook-rs.git"]
# quest_hook = { path = "../quest-hook-rs" }


[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
quest_build_helper = { git = "https://github.com/Fernthedev/quest-hook-rs.git", branch = "cordl-fixes", package = "quest_build_helper" }
